RESOLVED FIXED70956
StyleSheet.parentStyleSheet does not work.
https://bugs.webkit.org/show_bug.cgi?id=70956
Summary StyleSheet.parentStyleSheet does not work.
Andreas Kling
Reported 2011-10-26 12:13:30 PDT
The current implementation of StyleSheet.parentStyleSheet assumes that the parentStyleSheet is the direct parent of the StyleSheet. This is never the case, as StyleSheet is always parented by a CSSRule.
Attachments
Ein Patch (3.13 KB, patch)
2011-10-26 12:17 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-10-26 12:17:22 PDT
Created attachment 112575 [details] Ein Patch
Antti Koivisto
Comment 2 2011-10-26 12:20:30 PDT
Comment on attachment 112575 [details] Ein Patch r=me
Antti Koivisto
Comment 3 2011-10-26 12:21:01 PDT
Comment on attachment 112575 [details] Ein Patch r=me
WebKit Review Bot
Comment 4 2011-10-27 07:26:18 PDT
Comment on attachment 112575 [details] Ein Patch Clearing flags on attachment: 112575 Committed r98568: <http://trac.webkit.org/changeset/98568>
WebKit Review Bot
Comment 5 2011-10-27 07:26:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.