StyleSheet.parentStyleSheet does not work. https://bugs.webkit.org/show_bug.cgi?id=70956

Patch by Andreas Kling <kling@webkit.org> on 2011-10-27
Reviewed by Antti Koivisto.

Source/WebCore:

Since StyleSheet is only ever parented by a CSSRule, we need
to go through that rule when resolving the StyleSheet's parent.

Test: fast/css/stylesheet-parentStyleSheet.html

* css/StyleSheet.cpp:
(WebCore::StyleSheet::parentStyleSheet):

LayoutTests:

* fast/css/stylesheet-parentStyleSheet-expected.txt: Added.
* fast/css/stylesheet-parentStyleSheet.html: Added.

Canonical link: https://commits.webkit.org/87213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98568 268f45cc-cd09-0410-ab3c-d52691b4dbfc